--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
        <ul>
            
            <li>I am 50 Years Old</li>
-           <li> I live in Topsham </li>
+           <li> I live in Topsham, Exeter</li>
            <li>I have a dog called Marley</li>
            <p> Please leave your email here</p>
            
